Add default empty site

--- a/en/archives.html
+++ b/en/archives.html
@@ -60,14 +60,14 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
-            <article>
-                <h2><a href="http://localhost:8888/en/maze-solver-using-image-processing/">Maze solver</a></h2>
-                <div class="summary"><p>Short version for index and feeds</p>
-                    <a class="btn btn-default btn-xs" href="http://localhost:8888/en/maze-solver-using-image-processing/">more ...</a>
-                </div>
-            </article>
-            <hr/>
+    <section id="content">
+        <h1>Archives for <code>#define UNDEFINED</code></h1>
 
+        <dl>
+                <dt>Mar 03 décembre 2013</dt>
+                <dd><a href='maze-solver-using-image-processing/'>Maze solver</a></dd>
+        </dl>
+    </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
 <aside>
