--- a/en/categories.html
+++ b/en/categories.html
@@ -3,7 +3,7 @@
       xmlns:og="http://ogp.me/ns#"
       xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
-    <title>#define UNDEFINED</title>
+    <title>#define UNDEFINED - Categories</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -60,14 +60,12 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
-            <article>
-                <h2><a href="http://localhost:8888/en/maze-solver-using-image-processing/">Maze solver</a></h2>
-                <div class="summary"><p>Short version for index and feeds</p>
-                    <a class="btn btn-default btn-xs" href="http://localhost:8888/en/maze-solver-using-image-processing/">more ...</a>
-                </div>
-            </article>
-            <hr/>
-
+    <section id="categories">
+        <h1>Categories for #define UNDEFINED</h1>
+        <ul>
+                <li><a href="category/image-processing.html">Image processing</a></li>
+        </ul>
+    </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
 <aside>
