--- a/en/tags.html
+++ b/en/tags.html
@@ -13,19 +13,28 @@
 
             <meta property="og:type" content="website"/>
             <meta property="og:title" content="#define UNDEFINED"/>
-            <meta property="og:url" content="http://localhost:8888/en"/>
+            <meta property="og:url" content="http://defundefined.com/en"/>
             <meta property="og:description" content="#define UNDEFINED"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://localhost:8888/en/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="http://localhost:8888/en/theme/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://localhost:8888/en/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="http://localhost:8888/en/theme/css/pygments.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://localhost:8888/en/theme/css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="http://defundefined.com/en/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://defundefined.com/en/theme/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://defundefined.com/en/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="http://defundefined.com/en/theme/css/pygments.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://defundefined.com/en/theme/css/style.css" type="text/css"/>
     <!-- JavaScript plugins (requires jQuery) -->
     <script src="//code.jquery.com/jquery.min.js"></script>
 
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-46633219-1', 'defundefined.com');
+        ga('send', 'pageview');
+     </script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -37,20 +46,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://localhost:8888/en" class="navbar-brand"><code>#define UNDEFINED</code></a>
+            <a href="http://defundefined.com/en" class="navbar-brand"><code>#define UNDEFINED</code></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="http://localhost:8888/en/pages/about.html">About</a></li>
-                        <li >
-                            <a href="http://localhost:8888/en/category/image-processing.html">Image processing</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://localhost:8888/fr" style="padding-right: 2px">Français</a></li>
+                <li><a href="http://defundefined.com/fr" style="padding-right: 2px">Français</a></li>
                 <li><a style="padding-right: 2px; padding-left: 2px;">-</a></li>
-                <li><a href="http://localhost:8888/en" style="padding-left: 2px"></i>[English]</a></li>
-                <li><a href="http://localhost:8888/en/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                <li><a href="http://defundefined.com/en" style="padding-left: 2px"></i>[English]</a></li>
+                <li><a href="http://defundefined.com/en/archives.html"><i class="icon-th-list"></i>Archives</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -62,9 +67,7 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for #define UNDEFINED</h1>
-        <ul>                <li><a href="http://localhost:8888/en/tag/c.html">C++</a> (1)</li>
-                <li><a href="http://localhost:8888/en/tag/image-processing.html">Image processing</a> (1)</li>
-        </ul>
+        <ul>        </ul>
     </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
@@ -81,17 +84,7 @@
 
 
 
-            <li class="list-group-item"><a href="http://localhost:8888/en/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-4">
-                    <a href="http://localhost:8888/en/tag/c.html">
-                        C++
-                    </a>
-                </li>
-                <li class="list-group-item tag-4">
-                    <a href="http://localhost:8888/en/tag/image-processing.html">
-                        Image processing
-                    </a>
-                </li>
+            <li class="list-group-item"><a href="http://defundefined.com/en/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
         </ul>
     </section>
 </aside>        </div>
@@ -99,9 +92,9 @@
 </div>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://localhost:8888/en/theme/js/bootstrap.min.js"></script>
+<script src="http://defundefined.com/en/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://localhost:8888/en/theme/js/respond.min.js"></script>
+<script src="http://defundefined.com/en/theme/js/respond.min.js"></script>
 </body>
 </html>
