--- a/fr/archives.html
+++ b/fr/archives.html
@@ -50,6 +50,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                        <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
