Add french version of trivial steganography article

--- a/fr/index.html
+++ b/fr/index.html
@@ -51,6 +51,9 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
+                        <li >
+                            <a href="http://defundefined.com/fr/category/traitement-dimage.html">Traitement d'image</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
@@ -66,6 +69,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
+            <article>
+                <h2><a href="http://defundefined.com/fr/trivial-steganography/">Trivial steganography</a></h2>
+                <div class="summary"><p>La <a href="http://fr.wikipedia.org/wiki/Stéganographie">stéganographie</a> est l'art de dissimuler de l'information dans un document. L'objectif est qu'une personne qui voit le document ne se doute pas qu'une information y est dissimulée. Tout l'enjeu réside dans le fait que même en connaissant la méthode de dissimulation, une personne récupérant l'image ne doit pas pouvoir déterminer si une information s'y cache ou non. Cependant dans un souci de simplicité nous nous limiterons à présenter un schéma pour lequel une personne ne peut distinguer à l'oeil nu si un document a été stéganographiée.</p>
+                    <a class="btn btn-default btn-xs" href="http://defundefined.com/fr/trivial-steganography/">plus ...</a>
+                </div>
+            </article>
+            <hr/>
 
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
@@ -83,6 +93,21 @@
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Steganographie
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
         </ul>
     </section>
 </aside>        </div>
