--- a/fr/tags.html
+++ b/fr/tags.html
@@ -51,6 +51,9 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
+                        <li >
+                            <a href="http://defundefined.com/fr/category/traitement-dimage.html">Traitement d'image</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
@@ -68,7 +71,10 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for #define UNDEFINED</h1>
-        <ul>        </ul>
+        <ul>                <li><a href="http://defundefined.com/fr/tag/c.html">C++</a> (1)</li>
+                <li><a href="http://defundefined.com/fr/tag/steganographie.html">Steganographie</a> (1)</li>
+                <li><a href="http://defundefined.com/fr/tag/traitement-dimage.html">Traitement d'image</a> (1)</li>
+        </ul>
     </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
@@ -86,6 +92,21 @@
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Steganographie
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
         </ul>
     </section>
 </aside>        </div>
