--- a/fr/categories.html
+++ b/fr/categories.html
@@ -51,6 +51,9 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
+                        <li >
+                            <a href="http://defundefined.com/fr/category/traitement-dimage.html">Traitement d'image</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
@@ -69,6 +72,7 @@
     <section id="categories">
         <h1>Categories for #define UNDEFINED</h1>
         <ul>
+                <li><a href="category/traitement-dimage.html">Traitement d'image</a></li>
         </ul>
     </section>
         </div>
@@ -87,6 +91,21 @@
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Steganographie
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
         </ul>
     </section>
 </aside>        </div>
