--- a/fr/pages/about.html
+++ b/fr/pages/about.html
@@ -50,6 +50,9 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
+                        <li >
+                            <a href="http://defundefined.com/fr/category/traitement-dimage.html">Traitement d'image</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
@@ -89,6 +92,21 @@
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Steganographie
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
         </ul>
     </section>
 </aside>        </div>
