--- a/fr/trivial-steganography/index.html
+++ b/fr/trivial-steganography/index.html
@@ -513,6 +513,30 @@ Peut-être que certains d'entre vous se sont demandés pourquoi c'est le vert qu
 <p>Alexis</p>
             </div>
             <!-- /.entry-content -->
+    <hr />
+    <section class="comments" id="comments">
+        <h2>Comments</h2>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'defundefined'; // required: replace example with your forum shortname
+            var disqus_identifier = 'trivial-steganography';
+            var disqus_url = 'http://defundefined.com/fr/trivial-steganography/';
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function () {
+                var dsq = document.createElement('script');
+                dsq.type = 'text/javascript';
+                dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+    </section>
         </article>
     </section>
 
@@ -533,13 +557,13 @@ Peut-être que certains d'entre vous se sont demandés pourquoi c'est le vert qu
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/steganographie.html">
-                        Steganographie
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
-                        Traitement d'image
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Steganographie
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
@@ -558,5 +582,18 @@ Peut-être que certains d'entre vous se sont demandés pourquoi c'est le vert qu
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="http://defundefined.com/fr/theme/js/respond.min.js"></script>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'defundefined'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
 </body>
 </html>
