Add magic-wand article

--- a/en/categories.html
+++ b/en/categories.html
@@ -80,7 +80,7 @@
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
