--- a/fr/archives.html
+++ b/fr/archives.html
@@ -73,8 +73,10 @@
         <h1>Archives de <code>#define UNDEFINED</code></h1>
 
         <dl>
+                <dt>Jeu 25 septembre 2014</dt>
+                <dd><a href='magic-wand/'>Une baguette oui, mais magique !</a></dd>
                 <dt>Dim 22 décembre 2013</dt>
-                <dd><a href='trivial-steganography/'>Trivial steganography</a></dd>
+                <dd><a href='trivial-steganography/'>La stéganographie pour les nuls</a></dd>
         </dl>
     </section>
         </div>
@@ -86,26 +88,31 @@
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-4">
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
+                <li class="list-group-item tag-1">
                     <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
                         Traitement d'image
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/steganographie.html">
-                        Steganographie
+                    <a href="http://defundefined.com/fr/tag/baguette-magique.html">
+                        Baguette magique
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/c.html">
-                        C++
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Stéganographie
                     </a>
                 </li>
         </ul>
