--- a/fr/trivial-steganography/index.html
+++ b/fr/trivial-steganography/index.html
@@ -3,7 +3,7 @@
       xmlns:og="http://ogp.me/ns#"
       xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
-    <title>Trivial steganography</title>
+    <title>La stéganographie pour les nuls</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <!-- Open Graph tags -->
 
             <meta property="og:type" content="article"/>
-            <meta property="og:title" content="Trivial steganography"/>
+            <meta property="og:title" content="La stéganographie pour les nuls"/>
             <meta property="og:url" content="http://defundefined.com/fr/trivial-steganography/"/>
             <meta property="og:description" content="La stéganographie est l'art de dissimuler de l'information dans un document. L'objectif est qu'une personne qui voit le document ne se doute pas qu'une information y est dissimulée. Tout l'enjeu réside dans le fait que même en connaissant la méthode de dissimulation, une personne récupérant l'image ne doit pas pouvoir déterminer si une information s'y cache ou non. Cependant dans un souci de simplicité nous nous limiterons à présenter un schéma pour lequel une personne ne peut distinguer à l'oeil nu si un document a été stéganographiée."/>
 
@@ -75,8 +75,8 @@
                 <h1>
                     <a href="http://defundefined.com/fr/trivial-steganography/"
                        rel="bookmark"
-                       title="Permalink to Trivial steganography">
-                        Trivial steganography
+                       title="Permalink to La stéganographie pour les nuls">
+                        La stéganographie pour les nuls
                     </a>
                 </h1>
             </header>
@@ -96,7 +96,7 @@
         /
 	<a href="http://defundefined.com/fr/tag/c.html">C++</a>
         /
-	<a href="http://defundefined.com/fr/tag/steganographie.html">Steganographie</a>
+	<a href="http://defundefined.com/fr/tag/steganographie.html">Stéganographie</a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <p>La <a href="http://fr.wikipedia.org/wiki/Stéganographie">stéganographie</a> est l'art de dissimuler de l'information dans un document. L'objectif est qu'une personne qui voit le document ne se doute pas qu'une information y est dissimulée.</p>
@@ -111,7 +111,7 @@
 <p>Dans cet article nous allons voir comment dissimuler une image dans une autre, en utilisant un algorithme simple mais efficace. Il consiste à modifier les pixels d'une certaine manière. Nous verrons également comment extraire l'image dissimulée. </p>
 <p>Pour ce faire, nous allons dans un premier temps voir quelques rappels sur le binaire et ses opérateurs. Puis nous verrons un exemple d'utilisation de la bibliothèque <a href="http://cimg.sourceforge.net">CImg</a> qui permet de travailler sur des images. Ensuite nous décrirons les deux algorithmes du schéma de stéganographie : la dissimulation et l'extraction.</p>
 <p>Et pour finir nous vous donnerons quelques pistes pour aller plus loin dans la stéganographie.</p>
-<p>Lien du dépôt git implementant cette algorithme : <a href="https://bitbucket.org/TrashZen/trivial-steganography">https://bitbucket.org/TrashZen/trivial-steganography</a></p>
+<p>Lien du dépôt git implementant cet algorithme : <a href="https://bitbucket.org/TrashZen/trivial-steganography">https://bitbucket.org/TrashZen/trivial-steganography</a></p>
 <h2>Quelques rappels pour s'échauffer</h2>
 <h3>Le binaire</h3>
 <p>Nous allons tout d'abord voir quelques rappels sur le binaire qui seront essentiels par la suite.</p>
@@ -549,26 +549,31 @@ Peut-être que certains d'entre vous se sont demandés pourquoi c'est le vert qu
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-4">
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
+                <li class="list-group-item tag-1">
                     <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
                         Traitement d'image
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/steganographie.html">
-                        Steganographie
+                    <a href="http://defundefined.com/fr/tag/baguette-magique.html">
+                        Baguette magique
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/c.html">
-                        C++
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Stéganographie
                     </a>
                 </li>
         </ul>
