--- a/fr/pages/about.html
+++ b/fr/pages/about.html
@@ -85,26 +85,31 @@
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-4">
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
+                <li class="list-group-item tag-1">
                     <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
                         Traitement d'image
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/steganographie.html">
-                        Steganographie
+                    <a href="http://defundefined.com/fr/tag/baguette-magique.html">
+                        Baguette magique
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/c.html">
-                        C++
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Stéganographie
                     </a>
                 </li>
         </ul>
