--- a/fr/tags.html
+++ b/fr/tags.html
@@ -71,9 +71,10 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for #define UNDEFINED</h1>
-        <ul>                <li><a href="http://defundefined.com/fr/tag/c.html">C++</a> (1)</li>
-                <li><a href="http://defundefined.com/fr/tag/steganographie.html">Steganographie</a> (1)</li>
-                <li><a href="http://defundefined.com/fr/tag/traitement-dimage.html">Traitement d'image</a> (1)</li>
+        <ul>                <li><a href="http://defundefined.com/fr/tag/baguette-magique.html">Baguette magique</a> (1)</li>
+                <li><a href="http://defundefined.com/fr/tag/c.html">C++</a> (2)</li>
+                <li><a href="http://defundefined.com/fr/tag/steganographie.html">Stéganographie</a> (1)</li>
+                <li><a href="http://defundefined.com/fr/tag/traitement-dimage.html">Traitement d'image</a> (2)</li>
         </ul>
     </section>
         </div>
@@ -85,26 +86,31 @@
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
 
 
             <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-4">
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
+                <li class="list-group-item tag-1">
                     <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
                         Traitement d'image
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/steganographie.html">
-                        Steganographie
+                    <a href="http://defundefined.com/fr/tag/baguette-magique.html">
+                        Baguette magique
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="http://defundefined.com/fr/tag/c.html">
-                        C++
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Stéganographie
                     </a>
                 </li>
         </ul>
