--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
             <meta property="og:type" content="website"/>
             <meta property="og:title" content="#define UNDEFINED"/>
-            <meta property="og:url" content="http://defundefined.com/en"/>
+            <meta property="og:url" content="http://defundefined.com/fr"/>
             <meta property="og:description" content="#define UNDEFINED"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://defundefined.com/en/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="http://defundefined.com/en/theme/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://defundefined.com/en/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="http://defundefined.com/en/theme/css/pygments.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://defundefined.com/en/theme/css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="http://defundefined.com/fr/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://defundefined.com/fr/theme/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://defundefined.com/fr/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="http://defundefined.com/fr/theme/css/pygments.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://defundefined.com/fr/theme/css/style.css" type="text/css"/>
     <!-- JavaScript plugins (requires jQuery) -->
     <script src="//code.jquery.com/jquery.min.js"></script>
 
@@ -46,17 +46,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://defundefined.com/en" class="navbar-brand"><code>#define UNDEFINED</code></a>
+            <a href="http://defundefined.com/fr" class="navbar-brand"><code>#define UNDEFINED</code></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="http://defundefined.com/en/pages/about.html">About</a></li>
+                        <li><a href="http://defundefined.com/fr/pages/about.html">À propos</a></li>
+                        <li >
+                            <a href="http://defundefined.com/fr/category/traitement-dimage.html">Traitement d'image</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://defundefined.com/fr" style="padding-right: 2px">Français</a></li>
+                <li><a href="http://defundefined.com/fr" style="padding-right: 2px">[Français]</a></li>
                 <li><a style="padding-right: 2px; padding-left: 2px;">-</a></li>
-                <li><a href="http://defundefined.com/en" style="padding-left: 2px"></i>[English]</a></li>
-                <li><a href="http://defundefined.com/en/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                <li><a href="http://defundefined.com/en" style="padding-left: 2px"></i>English</a></li>
+                <li><a href="http://defundefined.com/fr/archives.html"><i class="icon-th-list"></i>Archives</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -66,6 +69,20 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
+            <article>
+                <h2><a href="http://defundefined.com/fr/magic-wand/">Une baguette oui, mais magique !</a></h2>
+                <div class="summary"><p>Qu'est-ce qu'une baguette magique ? Facile, c'est comme dans Harry Potter ... Oui, mais pas que ! En retouche d'image, une baguette magique permet de détourer un objet. C'est grâce à cet outil que tu peux détourer la fille de tes rêves sur une photo et la copier-coller à côté de toi sur ta photo de profil. Il y a bien sûr d'autres utilités, dans le milieu médical par exemple.</p>
+                    <a class="btn btn-default btn-xs" href="http://defundefined.com/fr/magic-wand/">plus ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="http://defundefined.com/fr/trivial-steganography/">La stéganographie pour les nuls</a></h2>
+                <div class="summary"><p>La <a href="http://fr.wikipedia.org/wiki/Stéganographie">stéganographie</a> est l'art de dissimuler de l'information dans un document. L'objectif est qu'une personne qui voit le document ne se doute pas qu'une information y est dissimulée. Tout l'enjeu réside dans le fait que même en connaissant la méthode de dissimulation, une personne récupérant l'image ne doit pas pouvoir déterminer si une information s'y cache ou non. Cependant dans un souci de simplicité nous nous limiterons à présenter un schéma pour lequel une personne ne peut distinguer à l'oeil nu si un document a été stéganographiée.</p>
+                    <a class="btn btn-default btn-xs" href="http://defundefined.com/fr/trivial-steganography/">plus ...</a>
+                </div>
+            </article>
+            <hr/>
 
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
@@ -76,13 +93,33 @@
                     <li class="list-group-item"><a href="http://www.linkedin.com/in/francoisalexis"><i
                             class="icon-linkedin-sign icon-large"></i>linkedin
                     </a></li>
-                    <li class="list-group-item"><a href="https://bitbucket.org/TrashZen"><i
+                    <li class="list-group-item"><a href="https://bitbucket.org/Hadhoke"><i
                             class="icon-bitbucket-sign icon-large"></i>bitbucket
                     </a></li>
 
 
 
-            <li class="list-group-item"><a href="http://defundefined.com/en/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+            <li class="list-group-item"><a href="http://defundefined.com/fr/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/c.html">
+                        C++
+                    </a>
+                </li>
+                <li class="list-group-item tag-1">
+                    <a href="http://defundefined.com/fr/tag/traitement-dimage.html">
+                        Traitement d'image
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/baguette-magique.html">
+                        Baguette magique
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="http://defundefined.com/fr/tag/steganographie.html">
+                        Stéganographie
+                    </a>
+                </li>
         </ul>
     </section>
 </aside>        </div>
@@ -90,10 +127,10 @@
 </div>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://defundefined.com/en/theme/js/bootstrap.min.js"></script>
+<script src="http://defundefined.com/fr/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://defundefined.com/en/theme/js/respond.min.js"></script>
+<script src="http://defundefined.com/fr/theme/js/respond.min.js"></script>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'defundefined'; // required: replace example with your forum shortname
